Added github workflows and dockerfile.